--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "jest": "^26.5.0",
+    "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4",
